# jetson-mobile-robot

./: .gitignore  NOTES.md  README.md  package.xml  setup.py  setup_jetson.sh
config/: d455.yaml  mavros.yaml  slam_toolbox.yaml  ydlidar_4ros.yaml
docs/: architecture_notes.md  session_notes_2026-04-06.md  session_notes_2026-04-06b.md
foxglove/: robot_dashboard.json  slam_dashboard.json
launch/: foxglove.launch.py  lidar.launch.py  mavros.launch.py  mecanum_drive.launch.py  px4_slam.launch.py  robot_vision.launch.py  slam.launch.py
robot_vision/: depth_processor.py  jetson_stats_node.py  mecanum_drive_node.py  obstacle_detector.py  px4_bridge.py
scripts/: backup_jetson.ps1  build_px4_ws.sh  disable_rc_failsafe.py  fix_bashrc.py  healthcheck.sh  install_services.sh  inventory.sh  kill_foxglove.sh  migrate_to_nvme.sh  pull_px4_params.py  rc_drive.py  read_rc.py  robot-drive.service  robot-foxglove.service  robot-lidar.service  robot-mavros.service  robot-slam.service  safe_apt_upgrade.sh  setup_rplidar_udev.sh  setup_ydlidar_udev.sh  start_foxglove.sh  test_foxglove.sh  use_lidar.sh  use_slam.sh
