<?xml version="1.0"?>
<package format="3">
  <name>robot_vision</name>
  <version>0.1.0</version>
  <description>ROS2 vision pipeline for mobile robot with RealSense D455</description>
  <maintainer email="slurd@jetson">slurd</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>depth_image_proc</depend>
  <depend>pcl_ros</depend>
  <depend>realsense2_camera</depend>
  <depend>rplidar_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>px4_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
